# auto_drive_car

./: .gitignore  README.md  frames_2025-05-24_11.20.37.gv
src/base_msgs/: CMakeLists.txt  package.xml
src/data_plot/: package.xml  setup.py
src/data_plot/data_plot/: data_plot.py
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: planning_onlane_obs_config.yaml  planning_static_obs_config.yaml
src/planning/launch/: planning_launch.py
src/planning/rviz/: planning.rviz  rviz.rviz
src/planning/src/common/: CMakeLists.txt
src/planning/src/common/config_reader/: config_reader.cpp  config_reader.h
src/planning/src/common/math/: curve.cpp  curve.h  polynomial_curve.cpp  polynomial_curve.h
src/planning/src/decision_center/: CMakeLists.txt  decision_center.cpp  decision_center.h
src/planning/src/global_planner/: CMakeLists.txt  global_path_server.cpp  global_path_server.h  global_planner_base.h
src/planning/src/global_planner/global_planner_normal/: global_planner_normal.cpp  global_planner_normal.h
src/planning/src/local_planner/: CMakeLists.txt  local_trajectory_combiner.cpp  local_trajectory_combiner.h
src/planning/src/local_planner/local_path/: local_path_planner.cpp  local_path_planner.h  local_path_smoother.cpp  local_path_smoother.h
src/planning/src/local_planner/local_speeds/: local_speeds_planner.cpp  local_speeds_planner.h  local_speeds_smoother.cpp  local_speeds_smoother.h
src/planning/src/move_cmd/: CMakeLists.txt  car_move_cmd.cpp  car_move_cmd.h  obs_move_cmd.cpp  obs_move_cmd.h
src/planning/src/planning_process/: CMakeLists.txt  planning_node.cpp  planning_process.cpp  planning_process.h  planning_process_main.cpp
src/planning/src/pnc_map_creator/: CMakeLists.txt  pnc_map_creator_base.h  pnc_map_server.cpp  pnc_map_server.h
src/planning/src/pnc_map_creator/pnc_map_straight/: pnc_map_creator_straight.cpp  pnc_map_creator_straight.h
src/planning/src/pnc_map_creator/pnc_map_sturn/: pnc_map_creator_sturn.cpp  pnc_map_creator_sturn.h
src/planning/src/reference_line/: CMakeLists.txt  reference_line_creator.cpp  reference_line_creator.h  reference_line_smoother.cpp  reference_line_smoother.h
src/planning/src/test/: CMakeLists.txt
src/planning/src/test/osqp_test/: osqp_test.cpp  osqp_test.h
src/planning/src/vehicle_info/: CMakeLists.txt  vehicle_info_base.h
src/planning/src/vehicle_info/main_car/: main_car_info.cpp  main_car_info.h
src/planning/src/vehicle_info/obs_car/: obs_car_info.cpp  obs_car_info.h
src/planning/urdf/main_car/: car.xacro  car_base.xacro  car_camera.xacro  car_radar.xacro  car_wheels.xacro
